# FYP_Vibe_Implementation

./: .gitignore  LICENSE  README.md
AntiGravity/Android TTS Application/: README.md  settings.gradle.kts
AntiGravity/ChromeDinosaurGame/: README.md
AntiGravity/Google Dinosaur Game/: asset_manager.py  dino.py  draw_debug_atlas.py  extract.py  extract_fast.py  generate_atlas.py  main.py  obstacles.py  score_manager.py  settings.py
AntiGravity/NewsSentimentWithStock/: README.md  chat.md
AntiGravity/PDFWebsite/: README.md
AntiGravity/TTS_Application/: README.md
AntiGravity/To do list application/: playwright.config.js  summary.md  test.md
AntiGravity/To-do_List_Application/: error.md  index.html  package.json
AntiGravity/TodoListApplication/: README.md
AntiGravity/Unit-converter Calculator/: Building A Smart Calculator App.md  README.md  index.html  package-lock.json  package.json
Codex/ChromeDinosaurGame/: README.md  plan.md
Codex/NewsSentimentWithStock/: README.md  documentation.md  plan.md  test-cases.md
Codex/PDFWebsite/: README.md  plan.md
Codex/TTS_Application/: README.md  (+1 more)
MbdFEM/: FlexiblePendulumPrototype1.FCStd  README.md  error.md  flexible_pendulum_setup.py
ReviewWebsite/: index.html
VC_MbdFEM/: Init.py  InitGui.py  MbDFEM_Commands.py  WORKBENCH_CREATION_GUIDE.md  fem_translator.py  mbd_pure_python_solver.py  mbd_pybullet_solver.py  mbdfem_orchestrator.py  package.xml
VC_MbdFEM/.agent/workflows/: deploy_to_freecad.md
VC_MbdFEM/implementation_plan/: 2026-04-22_plan.md  2026-04-23_plan_package.md  2026-04-23_plan_pybullet.md
(+304 files in other folders)
